# Porygon

./: .gitignore  docker_cli.sh  note.sh  readme.md  test_endpoint.sh
AI_Microservices/: cluster.sh  nodepool.sh  vpc.sh
AI_Microservices/DSPy/: requirements.txt  test.py
AI_Microservices/Ray/: Raycluster_CPU.yaml  requirements.txt
AI_Microservices/agents/: deploy.py  job.py
AI_Microservices/lanfuse/: .env  test.py
AI_Microservices/mlflow/: Dockerfile  cur.sh  deploy.sh  pod.yaml  requirements.txt
GCP/: gcp.sh
GCP/gke/: deployment.yaml  gke.sh  ingress.yaml
porygon/agent/: agent.py  agent_model.py  chat_agent.py  deploy.py  deploy_agent.py  deploy_wikipedia_agent.py  load_model_ant_test.py  test_grok.py  wikipedia_agent.py
porygon/agents/: deploy.py
porygon/service/api_service/: Dockerfile  cloud_run_deploy.sh  deploy.sh  docker_build.sh  entry-point.sh  pyproject.toml  readme.md  requirements.txt  test_on_premise.sh
porygon/service/api_service/api/: main.py  schemas.py  utils.py
porygon/service/api_service/api/app/: router.py
porygon/service/api_service/api/app/api/v1/: wikipedia_agent.py
porygon/service/api_service/api/middleware/: auth.py
porygon/service/api_service/api/security/: auth.py
porygon/service/api_service/app/: main.py
porygon/service/api_service/porygon_api/: main.py  model_manager.py  schemas.py  utils.py
porygon/service/api_service/porygon_api/app/AIservice/: dependencies.py  router.py  service.py
porygon/service/api_service/porygon_api/app/AIservice/v1/: wikipedia_agent.py
porygon/service/api_service/porygon_api/app/UserQuery/: dependencies.py  router.py  schemas.py  service.py
porygon/service/api_service/porygon_api/app/UserQuery/v1/: Item.py  UserQuery.py
porygon/service/api_service/porygon_api/app/agent/: dependencies.py  router.py  schemas.py  service.py
porygon/service/api_service/porygon_api/app/agent/v1/: wikipedia_agent.py
porygon/service/api_service/porygon_api/app/user_query/: router.py  schemas.py  service.py
porygon/service/api_service/porygon_api/app/user_query/v1/: user_query.py
porygon/service/api_service/porygon_api/database/: db_connector.py
porygon/service/api_service/porygon_api/middleware/: auth.py  http.py  logging.py
porygon/service/api_service/porygon_api/security/: api_key.py
porygon/service/api_service/porygon_api/test/: test_cloudsql.py  test_endpoint.sh  test_on_premise.sh
porygon/service/api_service/security/: __init__.py
porygon/service/api_service/test/: test_endpoint.py
(+116 files in other folders)
