[tool.poetry]
name = "porygon-api"
version = "0.1.0"
description = ""
authors = ["Wiwi Kuo <w22151500@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.29.0"
gunicorn = "^21.2.0"
pydantic = "^2.7.4"
mlflow = "^2.21.3"
python-dotenv = "^1.0.1"
langchain = "^0.3.23"
langchain-core = "^0.3.51"
langchain-community = "^0.3.21"
langchain-openai = "^0.3.12"
langchain-anthropic = "^0.3.10"
langchain-text-splitters = "^0.3.8"
langchain-xai = "^0.2.2"
langgraph = "^0.3.21"
langgraph-checkpoint = "^2.0.23"
langgraph-prebuilt = "^0.1.7"
langgraph-sdk = "^0.1.60"
wikipedia = "^1.4.0"
langsmith = "^0.3.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
