[tool.poetry]
name = "porygon-api"
version = "0.1.0"
description = ""
authors = ["Wiwi Kuo <w22151500@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# --- Web Framework ---
fastapi = "^0.115.12"
uvicorn = "^0.29.0"
gunicorn = "^21.2.0"
aiofiles = "^24.1.0"

# --- Database & ML ---
mlflow = "^2.21.3"
google-cloud-firestore = "2.20.2"
cloud-sql-python-connector = "^1.18.1"
pg8000 = "^1.31.2"

# --- Others ---
pydantic = "^2.7.4"
wikipedia = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"